# pepsi-61800

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  package.json  start.sh  stop.sh  tsconfig.json
.claude/skills/pi-mono-framework/: SKILL.md
.claude/skills/pi-mono-framework/references/: pi-agent-core.md  pi-ai-internals.md  pi-ai.md  pi-coding-agent.md  pi-extensions-deep.md  pi-session-compaction.md  pi-tui-internals.md  pi-ui.md  pi-web-rpc-sdk.md
.github/workflows/: ci.yml  desktop-release.yml
apps/cli/: package.json  tsconfig.json
apps/cli/src/: main.ts
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: package.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: desktop.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
deploy/: breachweave-stop.desktop  breachweave.desktop  build-and-push-image.sh  tch-agent.service
docs/: P5-实施计划.md  deployment.md  engagement-mode.md  engagement-scope.example.json  使用指南.md  改进计划.md  第二届腾讯云黑客松智能渗透挑战赛API文档.md  第二届腾讯云黑客松智能渗透挑战赛MCP接入文档.md  配置手册.md  项目文档.md
mcp/: ssh_mcp.py  vuln_intel_mcp.py
scripts/: build.ts  desktop-dev.sh  generate-builtin-assets.ts  install-desktop-deps.sh  install-desktop-shortcut.sh  install.ts  pack-desktop-all.sh  pack-desktop-macos.sh  pack-desktop-windows.sh  pack-desktop.sh  pack-release.sh  prepare-desktop-sidecar.ts  smoke-desktop-sidecar.sh  start-breachweave.sh  stop-breachweave.sh
