[package]
name = "breachweave-desktop"
version = "0.0.1"
description = "BreachWeave desktop shell"
authors = ["ez team"]
edition = "2021"

[lib]
name = "breachweave_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
